# FBitSync

./: 99-FBit.rules  CMakeLists.txt  Dongle.cpp  Dongle.h  Main.cpp  Network.cpp  Network.h  README.md  README.md~  Tracker.cpp  Tracker.h
include/: Base64.h  Dongle.h  Network.h
src/: Base64.cpp  Dongle.cpp  Main.cpp  Network.cpp  Tracker.cpp
